--- a/experience.html
+++ b/experience.html
@@ -5,15 +5,15 @@
     <title>Athenas Technology  | Experience</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
-    <meta name="description" content="This project serves as a free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+    <meta name="keywords" content="Desarrollo Web" />
+    <meta name="description" content="Visita nuestro espacio digital para contratar nuestros servicios!" />
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/experience.html">
     <meta property="og:title" content="Athenas Technology  | Experience">
-    <meta property="og:description" content="This project serves as a free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+    <meta property="og:description" content="Visita nuestro espacio digital para contratar nuestros servicios!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/experience.html">
     <meta name="twitter:card" content="summary">
