--- a/experience.html
+++ b/experience.html
@@ -11,13 +11,12 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/experience.html">
+    <meta property="og:site_name" content="athenas-technology.com">
     <meta property="og:title" content="Athenas Technology  | Experience">
     <meta property="og:description" content="Visita nuestro espacio digital para contratar nuestros servicios!">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/experience.html">
+    <meta property="og:url" content="athenas-technology.com">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/experience.html">
 
     <meta name="application-name" content="Athenas Technology  | Experience" />
     <meta name="apple-mobile-web-app-title" content="Athenas Technology  | Experience" />
