--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <meta property="og:title" content="Athenas Technology | Home">
     <meta property="og:description" content="Visita nuestro espacio digital para contratar nuestros servicios!">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
+    <meta property="og:url" content="athenas-technology.com">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
+    <meta name="twitter:site" content="">
     <meta name="application-name" content="Athenas Technology | Home" />
     <meta name="apple-mobile-web-app-title" content="Athenas Technology | Home" />
     <meta name="summary" content="" />
