--- a/projects.html
+++ b/projects.html
@@ -19,15 +19,14 @@
     <meta name="AdsBot-Google" content="index,follow" />
 
     <!-- Open Graph for Social Media -->
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/projects.html" />
+    <meta property="og:site_name" content="athenas-technology.com" />
     <meta property="og:title" content="Athenas Technology | Projects" />
     <meta property="og:description" content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/projects.html" />
+    <meta property="og:url" content="athenas-technology.com" />
     <meta name="twitter:card" content="summary" />
 
-    <!-- Twitter Posts -->
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/projects.html" />
+
 
     <meta name="application-name" content="Athenas Technology | Projects" />
     <meta name="apple-mobile-web-app-title" content="Athenas Technology  | Projects" />
