--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="text col-sm-6" style="margin-top: 140px;">Hola <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, Somos <span class="header">Athenas Technology</span>
             <div class="center">
                 <div>
-                    <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
+                    <img src="assets/images/athenas.png" alt="" class="rounded-circle" height="200" width="200">
                 </div>
                 <br/>
                 <span style="display: inline;">Nos Especializamos en <span class="animated-text"
