--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Athenas Technology | Home</title>
+    <title>Octo Studio | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Desarrollo Web" />
@@ -11,14 +11,14 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="athenas-technology.com">
-    <meta property="og:title" content="Athenas Technology | Home">
+    <meta property="og:site_name" content="octostudiolab.com">
+    <meta property="og:title" content="Octo Studio | Home">
     <meta property="og:description" content="Visita nuestro espacio digital para contratar nuestros servicios!">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="athenas-technology.com">
+    <meta property="og:url" content="octostudiolab.com">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="">
-    <meta name="application-name" content="Athenas Technology | Home" />
+    <meta name="application-name" content="Octo Studio| Home" />
     <meta name="apple-mobile-web-app-title" content="Athenas Technology | Home" />
     <meta name="summary" content="" />
     <!--For Dark/Light mode Toggle-->
