--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <center>
         <!-- Home Section -->
-        <div class="text col-sm-6" style="margin-top: 140px;">Hola <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, Somos <span class="header">Athenas Technology</span>
+        <div class="text col-sm-6" style="margin-top: 140px;">Hola <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, Somos <span class="header">Octo Studio</span>
             <div class="center">
                 <div>
                     <img src="assets/images/OctoStudio-logo.jpg" alt="" class="rounded-circle" height="200" width="200">
