--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Athenas Technology  | Experience</title>
+    <title>Octo Studio  | Experience</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Desarrollo Web" />
@@ -11,15 +11,15 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="athenas-technology.com">
-    <meta property="og:title" content="Athenas Technology  | Experience">
+    <meta property="og:site_name" content="octostudiolab.com">
+    <meta property="og:title" content="Octo Studio  | Experience">
     <meta property="og:description" content="Visita nuestro espacio digital para contratar nuestros servicios!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="athenas-technology.com">
     <meta name="twitter:card" content="summary">
 
-    <meta name="application-name" content="Athenas Technology  | Experience" />
-    <meta name="apple-mobile-web-app-title" content="Athenas Technology  | Experience" />
+    <meta name="application-name" content="Octo Studio | Experience" />
+    <meta name="apple-mobile-web-app-title" content="Octo Studio | Experience" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <!--For Dark/Light mode Toggle-->
