--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Athenas Technology  | Projects</title>
+    <title>Octo Studio  | Projects</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -28,9 +28,9 @@
 
 
 
-    <meta name="application-name" content="Athenas Technology | Projects" />
-    <meta name="apple-mobile-web-app-title" content="Athenas Technology  | Projects" />
-    <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+    <meta name="application-name" content="Octo Studio | Projects" />
+    <meta name="apple-mobile-web-app-title" content="Octo Studio  | Projects" />
+    <meta name="summary" content="" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 
