--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
     <meta name="AdsBot-Google" content="index,follow" />
 
     <!-- Open Graph for Social Media -->
-    <meta property="og:site_name" content="athenas-technology.com" />
-    <meta property="og:title" content="Athenas Technology | Projects" />
+    <meta property="og:site_name" content="octostudiolab.com" />
+    <meta property="og:title" content="Octo Studio | Projects" />
     <meta property="og:description" content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="athenas-technology.com" />
@@ -296,7 +296,7 @@ add
               </svg>
                     </div>
                     <div class="dropdown col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
-                        <h2 class="main-heading mb-0 projects_head">Mis <span class="my_projects">Proyectos</span></h2>
+                        <h2 class="main-heading mb-0 projects_head">Nuestros <span class="my_projects">Proyectos</span></h2>
                         <p class="pre-heading font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
                             Nuestros proyectos llevan una interfaz muy moderna e interactiva, de tal modo que los consumidores tengan una excellente experiencia navegando.
                         </p>
