--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                                 c117.9-117.9,82.9-167.7,82.9-167.7l-2.8-0.1C241.6,182.3,238.2,181.9,233.2,181.5z" />
                             </svg>
                         </a>
-                        <a class="socialicon instagram" href="https://www.instagram.com/cpadilla5/" target="_blank" rel="author">
+                        <a class="socialicon instagram" href="https://instagram.com/octostudiohn?igshid=YmMyMTA2M2Y=" target="_blank" rel="author">
                             <!-- svg code for instagram icon -->
                             <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
                                 <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
